<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center">
        <TextView
            android:text="@string/main_title"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/puzzle_dark"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="45sp" />
        <Button
            android:id="@+id/continue_button"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/continue_label" />
        <Button
            android:id="@+id/new_button"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game_label" />
        <Button
            android:id="@+id/about_button"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_button" />

        <Button
            android:id="@+id/exit_button"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_label" />
    </LinearLayout>
</LinearLayout>